AMQ-9254 Migrate data file size fix to jvm 1.8